@@ -174,6 +174,8 @@ Other Changes
   recovery scenarios after the leader receives an error trying to forward an
   update request to a replica. (Timothy Potter)
 
+* SOLR-6116: Refactor DocRouter.getDocRouter to accept routerName as a String. (shalin)
+
 Optimizations
 ----------------------
 
